# Labs

./: .gitignore
lab0/: CMakeLists.txt
lab0/lab0/: lab0_triangle.cpp  lab0_triangle.vert  lab0_window.cpp
lab1/: CMakeLists.txt
lab1/lab1/: lab1_cube.cpp
lab2/: CMakeLists.txt
lab2/Submission/: lab2_building.cpp
lab2/lab2/: box.frag  box.vert  lab2_building.cpp  lab2_model.cpp  lab2_skybox.cpp  model.frag  model.vert
lab2/lab2/model/: README.md  tree.glb
lab2/lab2/model/tree/: result.gltf
